Changed puppet.conf for autosign script

--- a/puppet.conf
+++ b/puppet.conf
@@ -7,8 +7,8 @@
     confdir         = /opt/puppet
     basemodulepath  = $confdir/site-modules:$confdir/modules:/usr/share/puppet/modules
     factpath        = $confdir/facts:/var/lib/puppet/lib/facter:/var/lib/puppet/facts
-    autosign        = false
+    autosign        = $confdir/check_csr.py
     hiera_config    = $confdir/hiera.yaml
     rest_authconfig = $confdir/auth.conf
     ssldir          = $vardir/ssl
-    csr_attributes  = /etc/puppet/csr_attributes.yaml
+    csr_attributes  = $confdir/csr_attributes.yaml
