--- a/puppet.conf
+++ b/puppet.conf
@@ -4,7 +4,7 @@
 
 [master]
     certname        = puppet
-    confdir         = /opt/puppet
+    confdir	    = /etc/puppet
     basemodulepath  = $confdir/site-modules:$confdir/modules:/usr/share/puppet/modules
     factpath        = $confdir/facts:/var/lib/puppet/lib/facter:/var/lib/puppet/facts
     autosign        = $confdir/check_csr.py
